Add endpoint to add enterprise to a group
plus documentaion
